[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medusa-svd-attack"
dynamic = ["version"]
description = "Nuclear-norm temporal attention attack for Stable Video Diffusion"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/medusa-research/medusa"

[tool.hatch.version]
path = "sgm/__init__.py"

[tool.hatch.build]
# This needs to be explicitly set so the configuration files
# grafted into the `sgm` directory get included in the wheel's
# RECORD file.
include = [
    "sgm",
    "attack",
    "scripts/sampling/configs/svd.yaml",
]
